maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:26: error: ')' expected but 'else' found.
          else{right()
          ^